--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:id="@+id/main_bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:minHeight="56dp"
         app:itemIconTint="@drawable/selector_color_bottom_nav"
         app:itemTextAppearanceActive="@style/TextAppearance.Caption"
