--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -6,4 +6,9 @@
         android:id="@+id/nav_home"
         android:icon="@drawable/ic_fill_home_24"
         android:title="Home" />
+
+    <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/ic_search_24"
+        android:title="Search" />
 </menu>
