--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -5,5 +5,6 @@
     app:startDestination="@id/nav_home">
 
     <include app:graph="@navigation/nav_home" />
+    <include app:graph="@navigation/nav_search" />
 
 </navigation>
