--- a/core/common/src/main/res/values/deeplinks.xml
+++ b/core/common/src/main/res/values/deeplinks.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="deep_link_home" translatable="false">contactsapp://home/</string>
+    <string name="deep_link_search" translatable="false">contactsapp://search/</string>
 </resources>
