--- a/core/ui/src/main/res/values-night/themes.xml
+++ b/core/ui/src/main/res/values-night/themes.xml
@@ -2,6 +2,8 @@
 <resources>
 
     <style name="Theme.ContactApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorOnSurfaceVariant">#FFFFFF</item>
+
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnPrimary">@color/white</item>
