--- a/feature/search/src/main/res/layout/fragment_search.xml
+++ b/feature/search/src/main/res/layout/fragment_search.xml
@@ -6,6 +6,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
+        app:navigationIcon="@null"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:theme="@style/Theme.Toolbar"
